SummaryRange ContainsDuplicate